# ChangeLog for sci-mathematics/pari
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/ChangeLog,v 1.5 2005/01/07 09:40:26 phosphan Exp $

*pari-2.1.5-r4 (07 Jan 2005)

  07 Jan 2005; Patrick Kursawe <phosphan@gentoo.org>
  +files/wrong_functype-r1.patch, files/wrong_functype.patch,
  -pari-2.1.5-r3.ebuild, +pari-2.1.5-r4.ebuild, pari-2.1.6.ebuild:
  Function call patch was missing one line of 2.1.5. Bumping revision,
  modified patch, removed old version.

*pari-2.1.6 (06 Jan 2005)

  06 Jan 2005; Patrick Kursawe <phosphan@gentoo.org>
  +files/wrong_functype.patch, -pari-2.1.5-r2.ebuild, pari-2.1.5-r3.ebuild,
  +pari-2.1.6.ebuild:
  Fixing bug #74431 (gp segfaults on start). Patch from 
  http://pari.math.u-bordeaux.fr/cgi-bin/bugreport.cgi?bug=133
  (development branch).
  Declaring fixed version as stable for x86.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*pari-2.1.5-r3 (28 Dec 2004)

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +files/docs.patch, +pari-2.1.5-r1.ebuild, +pari-2.1.5-r2.ebuild,
  +pari-2.1.5-r3.ebuild:
  Moved from app-sci/pari to sci-mathematics/pari.

  12 Sep 2004; Bryan Østergaard <kloeri@gentoo.org> pari-2.1.5-r3.ebuild:
  Fix fPIC issue on alpha.

  06 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> pari-2.1.5-r3.ebuild:
  Marked stable on amd64.

  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> pari-2.1.5-r2.ebuild,
  pari-2.1.5-r3.ebuild:
  Fix use invocation

*pari-2.1.5-r3 (11 May 2004)

  11 May 2004; Patrick Kursawe <phosphan@gentoo.org> pari-2.1.5-r3.ebuild,
  files/docs.patch:
  Fixing some of the TeX sources for the docs and adding the emacs file when
  emacs is in USE (see bug #44355)

  08 May 2004; Danny van Dyk <kugelfang@gentoo.org> pari-2.1.5-r2.ebuild:
  Shared library will now be built with -fPIC, solves BUG #49853.
